--- a/Brandymint/Controllers/CardViewController/CardViewController.xib
+++ b/Brandymint/Controllers/CardViewController/CardViewController.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">12D78</string>
+		<string key="IBDocument.SystemVersion">11G63</string>
 		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
-		<string key="IBDocument.AppKitVersion">1187.37</string>
-		<string key="IBDocument.HIToolboxVersion">626.00</string>
+		<string key="IBDocument.AppKitVersion">1138.51</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">2083</string>
@@ -160,9 +160,9 @@
 								<reference key="NSSuperview" ref="389308217"/>
 								<reference key="NSNextKeyView" ref="485883334"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor" id="210001421">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MCAwIDAgMC4yAA</bytes>
+								<object class="NSColor" key="IBUIBackgroundColor" id="605722275">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MCAwAA</bytes>
 								</object>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -171,7 +171,14 @@
 								<string key="IBUINormalTitle">Potee.me</string>
 								<reference key="IBUIHighlightedTitleColor" ref="757175051"/>
 								<reference key="IBUINormalTitleColor" ref="822072310"/>
-								<reference key="IBUINormalTitleShadowColor" ref="210001421"/>
+								<object class="NSColor" key="IBUINormalTitleShadowColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MCAwIDAgMC4yAA</bytes>
+								</object>
+								<object class="NSCustomResource" key="IBUINormalImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">icon-link.png</string>
+								</object>
 								<object class="IBUIFontDescription" key="IBUIFontDescription" id="696752130">
 									<string key="name">Helvetica-Light</string>
 									<string key="family">Helvetica</string>
@@ -191,10 +198,7 @@
 								<reference key="NSSuperview" ref="389308217"/>
 								<reference key="NSNextKeyView" ref="390726227"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor" id="794445416">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MCAwIDAgMC4yAA</bytes>
-								</object>
+								<reference key="IBUIBackgroundColor" ref="605722275"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -202,7 +206,14 @@
 								<string key="IBUINormalTitle">Potee.me</string>
 								<reference key="IBUIHighlightedTitleColor" ref="757175051"/>
 								<reference key="IBUINormalTitleColor" ref="822072310"/>
-								<reference key="IBUINormalTitleShadowColor" ref="794445416"/>
+								<object class="NSColor" key="IBUINormalTitleShadowColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MCAwIDAgMC4yAA</bytes>
+								</object>
+								<object class="NSCustomResource" key="IBUINormalImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">badge-appstore.png</string>
+								</object>
 								<reference key="IBUIFontDescription" ref="696752130"/>
 								<reference key="IBUIFont" ref="435052538"/>
 							</object>
@@ -212,10 +223,7 @@
 								<string key="NSFrame">{{222, 1}, {135, 44}}</string>
 								<reference key="NSSuperview" ref="389308217"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor" id="431713531">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MCAwIDAgMC4yAA</bytes>
-								</object>
+								<reference key="IBUIBackgroundColor" ref="605722275"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -223,7 +231,14 @@
 								<string key="IBUINormalTitle">Potee.me</string>
 								<reference key="IBUIHighlightedTitleColor" ref="757175051"/>
 								<reference key="IBUINormalTitleColor" ref="822072310"/>
-								<reference key="IBUINormalTitleShadowColor" ref="431713531"/>
+								<object class="NSColor" key="IBUINormalTitleShadowColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MCAwIDAgMC4yAA</bytes>
+								</object>
+								<object class="NSCustomResource" key="IBUINormalImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">badge-googleplay.png</string>
+								</object>
 								<reference key="IBUIFontDescription" ref="696752130"/>
 								<reference key="IBUIFont" ref="435052538"/>
 							</object>
@@ -442,6 +457,7 @@
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="30.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<real value="0.0" key="30.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="38.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="41.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -458,10 +474,12 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="NS.key.0">potee_screenshot.jpg</string>
-			<string key="NS.object.0">{411, 257}</string>
-		</object>
+		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="badge-appstore.png">{134, 40}</string>
+			<string key="badge-googleplay.png">{135, 40}</string>
+			<string key="icon-link.png">{26, 27}</string>
+			<string key="potee_screenshot.jpg">{411, 257}</string>
+		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
 </archive>
